@@ -1,12 +1,12 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/go/go-1.4.ebuild,v 1.1 2014/12/11 06:24:53 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/go/go-1.4.ebuild,v 1.2 2014/12/11 17:03:50 williamh Exp $
 
 EAPI=5
 
 export CTARGET=${CTARGET:-${CHOST}}
 
-inherit bash-completion-r1 elisp-common toolchain-funcs eutils
+inherit eutils toolchain-funcs
 
 if [[ ${PV} = 9999 ]]; then
 	EHG_REPO_URI="https://go.googlecode.com/hg"
@@ -22,12 +22,10 @@ HOMEPAGE="http://www.golang.org"
 
 LICENSE="BSD"
 SLOT="0"
-IUSE="emacs vim-syntax zsh-completion"
+IUSE=""
 
 DEPEND=""
-RDEPEND="emacs? ( virtual/emacs )
-	vim-syntax? ( || ( app-editors/vim app-editors/gvim ) )
-	zsh-completion? ( app-shells/gentoo-zsh-completions )"
+RDEPEND=""
 
 # The tools in /usr/lib/go should not cause the multilib-strict check to fail.
 QA_MULTILIB_PATHS="usr/lib/go/pkg/tool/.*/.*"
@@ -61,11 +59,6 @@ src_compile()
 
 	cd src
 	./make.bash || die "build failed"
-	cd ..
-
-	if use emacs; then
-		elisp-compile misc/emacs/*.el
-	fi
 }
 
 src_test()
@@ -88,38 +81,18 @@ src_install()
 	# installing the doc and src directories.
 	# [1] http://code.google.com/p/go/issues/detail?id=2775
 	doins -r doc include lib pkg src
-
-	# the bash completions appear to be gone from the release tarball
-	#dobashcomp misc/bash/go
-	#bashcomp_alias go {5,6,8}{g,l} gccgo gofmt
-
-	if use emacs; then
-		elisp-install ${PN} misc/emacs/*.el misc/emacs/*.elc
-	fi
-
-	if use vim-syntax; then
-		insinto /usr/share/vim/vimfiles
-		doins -r misc/vim/ftdetect
-		doins -r misc/vim/ftplugin
-		doins -r misc/vim/syntax
-		doins -r misc/vim/plugin
-		doins -r misc/vim/indent
-	fi
-
-	if use zsh-completion; then
-		insinto /usr/share/zsh/site-functions
-		doins misc/zsh/go
-	fi
-
 	fperms -R +x /usr/lib/go/pkg/tool
+}
+
+pkg_preinst()
+{
+	has_version '<dev-lang/go-1.4' &&
+		export had_support_files=true ||
+		export had_support_files=false
 }
 
 pkg_postinst()
 {
-	if use emacs; then
-		elisp-site-regen
-	fi
-
 	# If the go tool sees a package file timestamped older than a dependancy it
 	# will rebuild that file.  So, in order to stop go from rebuilding lots of
 	# packages for every build we need to fix the timestamps.  The compiler and
@@ -134,11 +107,14 @@ pkg_postinst()
 		${REPLACING_VERSIONS} != ${PV} ]]; then
 		elog "Release notes are located at http://golang.org/doc/go${PV}"
 	fi
-}
 
-pkg_postrm()
-{
-	if use emacs; then
-		elisp-site-regen
+	if $had_support_files; then
+		ewarn
+		ewarn "All editor support, IDE support, shell completion"
+		ewarn "support, etc has been removed from the go package"
+		ewarn "upstream."
+		ewarn "For more information on which support is available, see"
+		ewarn "the following URL:"
+		ewarn "https://github.com/golang/go/wiki/IDEsAndTextEditorPlugins"
 	fi
 }
