@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/go
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/go/ChangeLog,v 1.55 2014/12/11 06:24:53 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/go/ChangeLog,v 1.56 2014/12/11 17:03:50 williamh Exp $
+
+  11 Dec 2014; William Hubbs <williamh@gentoo.org> go-1.4.ebuild:
+  Fix #532246 -- remove all optional support for editors, plugins, IDES, etc.
 
 *go-1.4 (11 Dec 2014)
 
